--- a/Reg2/src/main/webapp/css/style.css
+++ b/Reg2/src/main/webapp/css/style.css
@@ -1,197 +1,138 @@
+body{
+/*margin: 0; 
 
-.container {
-    margin: 0 20px;
+/*background: url(politechnico.jpg);*/
+padding: 0;
+background-size: cover;
+background-position:center;
+font-family: sans-serif;
+
+background-color: #AEE4FF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #AEE4FF #AEE4FF, #AEE4FF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #AEE4FF, #AEE4FF, #AEE4FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
-a {
-  text-decoration: none;
-  cursor: pointer;
+
+.loginbox{
+width : 320px;
+height : 580px;
+background :#000;
+color : #fff;
+top: 50%;
+left: 50%;
+position: absolute;
+transform: translate(-50%,-50%);
+box-sizing: border-box;
+padding: 70px 30px;
+
 }
 
-/* Dashboard div */
-.column {
-    float: left;
-    margin: 50px 10px;
-    width: 40%;
-    padding: 10px;
-    height: 300px; 
-    text-align: center;
-}
-
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 100%;
-      margin: 2px 0;
+.loginbox1{
+    width : 800px;
+    height : 600px;
+    background :rgb(239, 241, 241);
+    color : rgb(0, 0, 0);
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+    
     }
-}
-
-/* Exam History */
-.course-histroy-div {
-    background: #b4bac0;
-    padding-bottom: 10px;
-}
-.column-1 {
-    float: left;
-    margin: 50px 0px;
-    width: 50%;
-    /* padding: 10px; */
-    height: 300px; 
-    text-align: center;
-}
-
-.dashboard-div {
-    padding: 15px 0;
-}
+    
+ .loginbox2{
+    height: 290px;
+    width: 450px;
+    background-color: #DCDCDC;
+    border: 2px;
+    text-align: center; position: absolute; 
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+    
+    }
 
 
-/* MODAL */
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 5px;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+
+h1{
+margin: 0;
+padding: 0 0 20px;
+text-align: center;
+font-size: 22px;
+
+}
+
+.loginbox p{
+margin: 0;
+padding:0;
+font-weight: bold;
+}
+
+.loginbox input{
+   
+width: 100%;
+margin-bottom: 20px;
+}
+
+.loginbox input[type = "email"], input[type = "password"]
+{
+
+border: none;
+border-bottom: 1px solid #fff;
+background: transparent;
+outline: none;
+height: 40px;
+color:#fff;
+font-size:16px;
+
+}
+
+.loginbox input[type = "submit"]
+{
+border: none;
+outline: none;
+height: 40px;
+background : #437c6b;
+color: #fff;
+font-size: 18px;
+border-radius: 20px;
+}
+
+.loginbox input[type = "submit"]:hover{
+cursor: pointer;
+background: #993d3d;
+color: #000;
+}
+
+.loginbox a{
+text-decoration: none;
+font-size: 12px;
+line-height:20px;
+color:darkgrey;
+}
+
+.loginbox a:hover{
+color: #ffc107;
+
+}
+
+
   
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
+/*.loginbox input[type = "text"], input[type = "password"] :hover :focus{
+    
+border-bottom: 1px solid #ffc107;
+
+}*/
+
+
+
+
+
+
+
+
+
   
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  .column-2 {
-    float: left;
-    width: 50%;
-    padding: 10px;
-    height: 200px; /* Should be removed. Only for demonstration */
-  }
-
-  /* Test Page */
-
-/* Style the tab */
-.tab {
-    float: left;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-    width: 30%;
-    height: 300px;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab button {
-    float: left;
-    display: block;
-    background-color: inherit;
-    color: black;
-    padding: 22px 16px;
-    width: 20%;
-    border: none;
-    outline: none;
-    text-align: left;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 17px;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current "tab button" class */
-  .tab button.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    float: left;
-    padding: 0px 50px;
-    border: 1px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 300px;
-    margin-bottom: 5px;
-  }
-  
-  .test_page_next {
-    float: right; 
-    border: 2px solid green;
-    border-radius: 5px;
-    margin-right: 20px;
-    padding: 10px 50px;
-  }
-
-  .submit-button {
-    margin-bottom: 2px;\
-    border: 2px solid blue;
-  }
-
-  .submit-button:hover {
-    background: green;
-    color: white;
-  }
-
- .tabcontent ul {
-    margin: 10px 0 0 0;
-    list-style-type: lower-alpha;
-  }
-
-
-/* SCORE Page */
-.test-page-div {
-  display: block;
-  margin: 10%;
-}
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  padding:50px 30px 0 30px;
-  width: 40%;
-
-  height: 200px;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.card-content {
-  padding: 2px 16px;
-  margin-bottom: 30px;
-}
-  
-
-.score-card-remark {
-  color: green;
-  font-size: 2rem;
-}
-
-.score-page-btn {
-  float: right;
-}
